--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "pinia": "^2.1.6",
     "scss": "^0.2.4",
     "unplugin-vue-define-options": "^1.3.14",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-echarts": "^6.6.1",
+    "vue-router": "^4.2.4",
+    "vue-svg-icon": "^1.2.9"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
