--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,5 @@
 NODE_ENV = 'development'
 VITE_APP_TITLE = 'vue-admin'
 VITE_APP_BASE_API = '/api'
+# VITE_SERVE = 'http://114.115.183.226:6666'
 VITE_SERVE = 'http://localhost:6666'
