--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.4.0",
     "better-scroll": "^2.5.1",
     "echarts": "^5.4.3",
-    "element-plus": "^2.3.9",
+    "element-plus": "^2.3.14",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
@@ -28,6 +28,7 @@
     "vue-svg-icon": "^1.2.9"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "sass": "^1.64.2",
     "typescript": "^5.0.2",
